Add delete project option to home screen long-press context menu
